--- a/plugin/tigergraph/recomengine/examples/drug_similarity/jupyter-demo/drug_similarity_TG_demo.ipynb
+++ b/plugin/tigergraph/recomengine/examples/drug_similarity/jupyter-demo/drug_similarity_TG_demo.ipynb
@@ -80,8 +80,7 @@
     "import random as rand\n",
     "from pathlib import Path, PurePosixPath\n",
     "import pyTigerGraph as tg\n",
-    "import os\n",
-    "from shutil import copyfile"
+    "import os"
    ]
   },
   {
@@ -165,9 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "localRepoLocation = Path(\"/proj/xsjhdstaff3/sachink/ghe\")\n",
-    "exampleLocation = Path(\"graphanalytics/plugin/tigergraph/recomengine/staging/examples/drug_similarity\") # when running from github repo\n",
-    "queryFileLocation = localRepoLocation / exampleLocation / \"query\""
+    "notebookLocation = Path(os.getcwd() + \"/..\")\n",
+    "queryFileLocation = notebookLocation / \"query\""
    ]
   },
   {
@@ -185,9 +183,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "serverRepoLocation = PurePosixPath(\"/proj/xsjhdstaff3/sachink/ghe\")\n",
-    "serverDataLocation = serverRepoLocation / PurePosixPath(exampleLocation) / \"data\"\n",
-    "copyfile(str(serverDataLocation / \"csv/embeddings.csv\"), \"/tmp/embeddings.csv\")"
+    "serverInstallLocation = PurePosixPath(\"/opt/xilinx/apps/graphanalytics/integration/Tigergraph-3.x/1.1/examples/drug_similarity\")\n",
+    "serverDataLocation = serverInstallLocation / \"data\""
    ]
   },
   {
@@ -300,7 +297,8 @@
     "with open(baseQFile) as bfh, open(clientQFile) as cfh:\n",
     "    print(\"installing base queries ...\")\n",
     "    qStrRaw = bfh.read()\n",
-    "    qStr = qStrRaw.replace('@graph', graphName)\n",
+    "    qStrRaw = qStrRaw.replace('@graph', graphName)\n",
+    "    qStr = qStrRaw.replace('@data_root', str(serverInstallLocation))\n",
     "    print(conn.gsql(qStr))\n",
     "    \n",
     "    print(\"\\ninstalling client queries ...\")\n",
